		- The number of teams per heat and vessels per team per heat are restricted to at most those in the selected spawn template.
		- Teams are considered as the per file / per folder option.
		- The "Re-use Craft To Fill Teams" option applies for teams that lack sufficient craft to fill the spawn template.
		- Both shuffled and ranked tournaments are supported.
	- Updated plot_summary.py to adjust how the graph and legend fit in the window.
- Countermeasures:
	- Fix NRE from countermeasure droppers missing a ejectTransform in the .cfg.
	- Fix Acousic Decoy launcher launch direction.
	- Acoustic Decoys will no longer defy gravity and fly if launched out of water.
	- Fix Bubble Curtain launcher NRE.
	- "Infinite Ordinance" now applies to countermeasure droppers.
	- Adjust cmThreshold timing for SLW countermeasures to 5x time set in WM to account for torpedoes being substantially slower than missiles.
		-	This should allow proper CM behavior against both torpedoes and missiles without compromising one or the other.
- Detectors:
	- RWR no longer clamped to visual FOV for detecting incoming missiles.
	- Add new fieldOfView field to RadarWarningReceiver module to set custom RWR FOV.
	- Fix AI not popping countermeasures for non-radar incoming missiles detected by RWR but outside visual range.
	- Added notching and beaming behavior for both vessel radars and missile radars.
	- Defaults to off. When toggled on, radars can be notched by an aircraft flying low and at 90° to the radar.
	- Behavior is configurable using the activeRadarVelocityGate and activeRadarRangeGate floatcurves for missiles and radarVelocityGate and radarRangeGate floatcurves for radars.
	- Also includes water blocking radars, forcing engagements to consider the horizon.
		- Surface vessels are permitted to see each other over the horizon to simplify naval engagements, this option, called "RADAR_ALLOW_SURFACE_WARFARE", can be turned off in the "GameData/BDArmory/PluginData/Settings.cfg" file.